@@ -1,5 +1,7 @@
 === HEAD
 
+* Allow per-instance overrides of Postgres.force_standard_strings and .client_min_messages (jeremyevans) (#618)
+
 * Add Sequel.tzinfo_disambiguator= to the named_timezones plugin for automatically handling TZInfo::AmbiguousTime exceptions (jeremyevans) (#616)
 
 * Add Dataset#escape_like, for escaping LIKE metacharacters (jeremyevans) (#614)
